<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlTop"
        style="@style/TopLayout" >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/icon_return" />

        <ImageView
            android:id="@+id/ivStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/step_register" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/register_tips1"
        android:textColor="@color/text_blue" />

    <EditText
        android:id="@+id/etName"
        style="@style/EditTextTheme"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/register_phone_num"
        android:paddingLeft="15dp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/CaptchaCode_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etInputCaptchaCode"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/forget_password_verifycode" />

        <ImageView
            android:id="@+id/ivGetCaptchaCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:visibility="gone" />

            <ProgressBar
                android:id="@+id/CaptchaCode_Loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnReGetCaptchaCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/button_blue_short"
            android:text="@string/forget_password_get_captchacode"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGetCode"
        style="@style/ButtonBlue"
        android:text="@string/forget_password_get_verifycode" />

    <LinearLayout
        android:id="@+id/llInputCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etInputCode"
            style="@style/EditTextTheme"
            android:layout_weight="1"
            android:hint="@string/forget_password_verifycode" />

        <Button
            android:id="@+id/btnReGetCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue_short"
            android:text="@string/forget_password_get_verifycode_again"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llInputPsw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/login_input_box"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etInputPsw"
            style="@style/EditTextTheme"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:digits="@string/register_name_digits"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ToggleButton
            android:id="@+id/tbPswFlag"
            android:layout_width="50dp"
            android:layout_height="24dp"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSure"
        style="@style/ButtonBlue"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/tvPhoneSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/register_use_email"
        android:textSize="14sp" />

</LinearLayout>