<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/logo3" />

    <EditText
        android:id="@+id/etName"
        style="@style/EditTextTheme"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:drawableLeft="@drawable/login_icon_name"
        android:hint="@string/login_name_hint" />

    <EditText
        android:id="@+id/etPsw"
        style="@style/EditTextTheme"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/login_icon_key"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/yellow"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_bt"
        android:text="@string/login"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_bt"
        android:text="@string/register"
        android:textColor="@android:color/black" />

</LinearLayout>