<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlTop"
        style="@style/TopLayout" >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/return_icon" />

        <ImageView
            android:id="@+id/ivStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/step_connect" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llStartConfig"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:src="@drawable/airlink_button" />

        <TextView
            android:id="@+id/tvTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/airlink_tips_start"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnConfig"
            style="@style/ButtonBlue"
            android:text="@string/airlink_btn_start" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConfiging"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvConfiging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/airlink_please_wait"
            android:textColor="@color/text_blue"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateDrawable="@drawable/image_progress" />

            <TextView
                android:id="@+id/tvTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="50sp" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llConfigFailed"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/airlink_tips_error1"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/airlink_tips_error2"
            android:textColor="@color/text_black"
            android:textSize="14sp" />
  
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/airlink_tips_error3"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btnRetry"
            style="@style/ButtonBlue"
            android:text="@string/airlink_btn_retry" />
        <Button
            android:layout_margin="10dp"
            android:id="@+id/btnSoftap"
            style="@style/ButtonBlue"
            android:text="@string/airlink_btn_softap" />
    </LinearLayout>

</LinearLayout>
