<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlTop"
        style="@style/TopLayout" >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forget_password"
            android:textColor="@color/text_blue"
            android:textSize="22sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etNum"
        style="@style/EditTextTheme"
        android:layout_marginTop="60dp"
        android:hint="@string/forget_password_hint1" />

    <Button
        android:id="@+id/btnGetCode"
        style="@style/ButtonBlue"
        android:text="@string/forget_password_get_verifycode" />

</LinearLayout>