<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlTop"
        style="@style/TopLayout" >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/icon_return" />

        <ImageView
            android:id="@+id/ivStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/step_register" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etName"
        style="@style/EditTextTheme"
        android:layout_marginTop="30dp"
        android:hint="@string/register_email" />



    <LinearLayout
        android:id="@+id/llInputPsw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/login_input_box"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etInputPsw"
            style="@style/EditTextTheme"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/password" />

        <ToggleButton
            android:id="@+id/tbPswFlag"
            android:layout_width="50dp"
            android:layout_height="24dp"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSure"
        style="@style/ButtonBlue"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/tvPhoneSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/register_use_mobilephone"
        android:textSize="14sp" />

</LinearLayout>
